2019-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* TclMagick/unix/m4/tcl.m4: Change hard-coded INSTALL path to
	point to config/install-sh.  Re-generated/updated Autotools stuff
	by executing the genconf.sh script.  Addresses the first problem
	noted by SourceForge issue #420 "TclMagick issues and patch".

2019-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): Eliminate warning about
	possibly uninitialized variable from primordial GCC 3.4.3.

	* magick/render.c (ConvertPrimitiveToPath): Eliminate warning that
	IsClosedSubPath might be used uninitialized.

	* magick/common.h ("MAGICK_FALLTHROUGH"): Added a
	MAGICK_FALLTHROUGH macro to support the GCC/Clang fallthrough
	attribute when the time comes again that it would be useful.

2019-10-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (ReadPCXImage): Verify that pixel region is not
	negative. Assure that opacity channel is initialized to
	opaqueOpacity.  Update DirectClass representation while
	PseudoClass representation is updated.  Improve read performance
	with uncompressed PCX.

2019-10-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Image properties are expected to
	appear within the first 512 bytes of the XPM file header.  fixes
	oss-fuzz 18267 "graphicsmagick:coder_PICON_fuzzer: Timeout in
	coder_PICON_fuzzer".

2019-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Fix tcmalloc configuration report.

2019-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): Implement subimage/subrange
	support.

	* coders/mat.c (ReadMATImage, ReadMATImageV4): Implement
	subimage/subrange support.  Should resolve oss-fuzz 14999
	"graphicsmagick/coder_MAT_fuzzer: Out-of-memory in
	graphicsmagick_coder_MAT_fuzzer".

	* coders/tiff.c (TIFFMapBlob): Fix compile problem if
	LOG_TIFF_BLOB_IO is defined.
